(feat): adiciona metodos buscarClientePorEnderecoId(query nativa), HATEOAS e regra para atualizar endereço com cliente