@@ -1,5 +1,7 @@
 package br.com.fco_romario.loja_ceda_artes.services;
 
+import br.com.fco_romario.loja_ceda_artes.controllers.ClienteController;
+import br.com.fco_romario.loja_ceda_artes.controllers.EnderecoController;
 import br.com.fco_romario.loja_ceda_artes.domain.Cliente;
 import br.com.fco_romario.loja_ceda_artes.dtos.EnderecoDTO;
 import br.com.fco_romario.loja_ceda_artes.domain.Endereco;
@@ -9,11 +11,15 @@ import br.com.fco_romario.loja_ceda_artes.mapper.ClienteMapper;
 import br.com.fco_romario.loja_ceda_artes.mapper.EnderecoMapper;
 import br.com.fco_romario.loja_ceda_artes.repositories.ClienteRepository;
 import br.com.fco_romario.loja_ceda_artes.repositories.EnderecoRepository;
+import ch.qos.logback.core.net.server.Client;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.stream.Collectors;
+
+import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.linkTo;
+import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.methodOn;
 
 @Service
 public class EnderecoService {
@@ -31,15 +37,19 @@ public class EnderecoService {
                 .orElseThrow(() -> new ResourceNotFoundException(
                         "Objecto não encontrado id: " + id + ", tipo: " + EnderecoDTO.class.getSimpleName()));
 
-        return EnderecoMapper.toDTO(entity);
-        //return modelMapper.map(entity, EnderecoDTO.class);
+        EnderecoDTO dto = EnderecoMapper.toDTO(entity);
+        adicionaLinksHateoas(dto);
+        return dto;
     }
 
     public List<EnderecoDTO> buscarTodos() {
         return enderecoRepository.findAll()
                 .stream()
-                .map(EnderecoMapper::toDTO)
-                .collect(Collectors.toList());
+                .map(endereco -> {
+                     EnderecoDTO dto =  EnderecoMapper.toDTO(endereco);
+                     adicionaLinksHateoas(dto);
+                     return dto;
+                }).toList();
     }
 
     public EnderecoDTO criar(EnderecoDTO enderecoDTO) {
@@ -53,26 +63,37 @@ public class EnderecoService {
         Endereco entity = EnderecoMapper.toEntity(enderecoDTO);
         entity.setCliente(cliente);
 
-        return EnderecoMapper.toDTO((enderecoRepository.save(entity)));
-        //return modelMapper.map(enderecoRepository.save(entity), EnderecoDTO.class);
+        EnderecoDTO dto = EnderecoMapper.toDTO((enderecoRepository.save(entity)));
+        adicionaLinksHateoas(dto);
+        return dto;
     }
 
     public EnderecoDTO atualizar(EnderecoDTO enderecoDTO) {
-        Endereco entity =   EnderecoMapper.toEntity(buscarPorId(enderecoDTO.getId()));
+        Endereco entity = EnderecoMapper.toEntity(buscarPorId(enderecoDTO.getId()));
+        Cliente cliente = ClienteMapper.toEntity(clienteService.buscarClientePorEnderecoId(enderecoDTO.getId()));
 
         entity.setLogradouro(enderecoDTO.getLogradouro());
         entity.setNumero(enderecoDTO.getNumero());
         entity.setComplemento(enderecoDTO.getComplemento());
         entity.setBairro(enderecoDTO.getBairro());
         entity.setCep(enderecoDTO.getCep());
-//        entity.setCidade(modelMapper.map(enderecoDTO.getCidade(), Cidade.class));
-//        entity.setCliente(modelMapper.map(enderecoDTO.getCliente(), Cliente.class));
+        entity.setCliente(cliente);
 
-        return EnderecoMapper.toDTO(enderecoRepository.save(entity));
+        EnderecoDTO dto = EnderecoMapper.toDTO(enderecoRepository.save(entity));
+        adicionaLinksHateoas(dto);
+        return dto;
     }
 
     public void deletar(Integer id) {
         Endereco entity =  EnderecoMapper.toEntity(buscarPorId(id));
         enderecoRepository.delete(entity);
+    }
+
+    private void adicionaLinksHateoas(EnderecoDTO dto) {
+        dto.add(linkTo(methodOn(EnderecoController.class).buscarPorId(dto.getId())).withSelfRel().withType("GET"));
+        dto.add(linkTo(methodOn(EnderecoController.class).buscarTodos()).withRel("buscarTodos").withType("GET"));
+        dto.add(linkTo(methodOn(EnderecoController.class).criar(dto)).withRel("criar").withType("POST"));
+        dto.add(linkTo(methodOn(EnderecoController.class).atualizar(dto)).withRel("atualizar").withType("PUT"));
+        dto.add(linkTo(methodOn(EnderecoController.class).deletar(dto.getId())).withRel("deletar").withType("DELETE"));
     }
 }
